bug 1187239 - ontransportstatus SENDING_TO should not use request stream re-entrantly r=hurley r=bz