netwerk/base/nsTransportUtils.cpp
@@ -23,13 +23,11 @@ public:
     NS_DECL_NSITRANSPORTEVENTSINK
 
     nsTransportEventSinkProxy(nsITransportEventSink *sink,
-                              nsIEventTarget *target,
-                              bool coalesceAll)
+                              nsIEventTarget *target)
         : mSink(sink)
         , mTarget(target)
         , mLock("nsTransportEventSinkProxy.mLock")
         , mLastEvent(nullptr)
-        , mCoalesceAll(coalesceAll)
     {
         NS_ADDREF(mSink);
     }
@@ -47,7 +45,6 @@ public:
     nsCOMPtr<nsIEventTarget>         mTarget;
     Mutex                            mLock;
     nsTransportStatusEvent          *mLastEvent;
-    bool                             mCoalesceAll;
 };
 
 class nsTransportStatusEvent : public nsRunnable
@@ -105,7 +102,7 @@ nsTransportEventSinkProxy::OnTransportStatus(nsITransport *transport,
         MutexAutoLock lock(mLock);
 
         // try to coalesce events! ;-)
-        if (mLastEvent && (mCoalesceAll || mLastEvent->mStatus == status)) {
+        if (mLastEvent && (mLastEvent->mStatus == status)) {
             mLastEvent->mStatus = status;
             mLastEvent->mProgress = progress;
             mLastEvent->mProgressMax = progressMax;
@@ -135,10 +132,9 @@ nsTransportEventSinkProxy::OnTransportStatus(nsITransport *transport,
 nsresult
 net_NewTransportEventSinkProxy(nsITransportEventSink **result,
                                nsITransportEventSink *sink,
-                               nsIEventTarget *target,
-                               bool coalesceAll)
+                               nsIEventTarget *target)
 {
-    *result = new nsTransportEventSinkProxy(sink, target, coalesceAll);
+    *result = new nsTransportEventSinkProxy(sink, target);
     if (!*result)
         return NS_ERROR_OUT_OF_MEMORY;
     NS_ADDREF(*result);
