netwerk/base/nsTransportUtils.h
@@ -14,16 +14,13 @@
  * that for example if the status value is the same from event to event, and
  * the previous event has not yet been delivered, then only one event will
  * be delivered.  The progress reported will be that from the second event.
- * If aCoalesceAllEvents is true, then any undelivered event will be replaced
- * with the next event if it arrives early enough.  This option should be used
- * cautiously since it can cause states to be effectively skipped.  Coalescing
- * events can help prevent a backlog of unprocessed transport events in the
- * case that the target thread is overworked.
+
+ * Coalescing events can help prevent a backlog of unprocessed transport
+ * events in the case that the target thread is overworked.
  */
 nsresult
 net_NewTransportEventSinkProxy(nsITransportEventSink **aResult,
                                nsITransportEventSink *aSink,
-                               nsIEventTarget *aTarget,
-                               bool aCoalesceAllEvents = false);
+                               nsIEventTarget *aTarget);
 
 #endif // nsTransportUtils_h__
