netwerk/test/unit/test_post.js
@@ -25,6 +25,31 @@ var teststring1 = "--" + BOUNDARY + "\r\n"
 var teststring2 = "--" + BOUNDARY + "--\r\n";
 
 const BUFFERSIZE = 4096;
+var correctOnProgress = false;
+
+var listenerCallback = {
+  QueryInterface: function (iid) {
+    if (iid.equals(Ci.nsISupports) ||
+	iid.equals(Ci.nsIProgressEventSink))
+      return this;
+    throw Cr.NS_ERROR_NO_INTERFACE;
+  },
+
+  getInterface: function (iid) {
+    if (iid.equals(Ci.nsIProgressEventSink))
+      return this;
+    throw Cr.NS_ERROR_NO_INTERFACE;
+  },
+
+  onProgress: function (request, context, progress, progressMax) {
+    // this works because the response is 0 bytes and does not trigger onprogress
+    if (progress === progressMax) {
+      correctOnProgress = true;
+    }
+  },
+
+    onStatus: function (request, context, status, statusArg) { },
+};
 
 function run_test() {
   var sstream1 = Cc["@mozilla.org/io/string-input-stream;1"].
@@ -63,9 +88,8 @@ function run_test() {
   channel.QueryInterface(Ci.nsIUploadChannel)
          .setUploadStream(mime, "", mime.available());
   channel.requestMethod = "POST";
-
+  channel.notificationCallbacks = listenerCallback;
   channel.asyncOpen(new ChannelListener(checkRequest, channel), null);
-
   do_test_pending();
 }
 
@@ -99,5 +123,6 @@ function serverHandler(metadata, response) {
 }
 
 function checkRequest(request, data, context) {
+  do_check_true(correctOnProgress);
   httpserver.stop(do_test_finished);
 }
